--- a/themes/cactus/_config.yml
+++ b/themes/cactus/_config.yml
@@ -15,9 +15,9 @@ direction: ltr
 # languages/*.yml
 nav:
   home: /
-  about: /about/
+  #about: /about/
   articles: /archives/
-  projects: http://github.com/probberechts
+  #projects: http://github.com/probberechts
 
 
 # Links to your social media accounts.
@@ -31,22 +31,8 @@ social_links:
     icon: github
     link: http://github.com/probberechts/cactus-dark
   -
-    icon: twitter
-    link: /
-  -
-    icon: facebook
-    link: /
-  -
     icon: mail
-    link: mailto:name@email.com
-  -
-    icon: mastodon
-    label: mastodon.social
-    link: https://mastodon.social/@alice
-  -
-    icon: mastodon
-    label: fosstodon.org
-    link: https://fosstodon.org/@alice
+    link: mailto:ou_1415190020@163.com
 
 # Customize the overview with displaying a tagcloud on the index page.
 # Options: https://hexo.io/docs/helpers.html#tagcloud
