--- a/themes/cactus/_config.yml
+++ b/themes/cactus/_config.yml
@@ -29,7 +29,7 @@ nav:
 social_links:
   -
     icon: github
-    link: http://github.com/probberechts/cactus-dark
+    link: https://github.com/yufengouyang
   -
     icon: mail
     link: mailto:ou_1415190020@163.com
