--- a/themes/cactus/_config.yml
+++ b/themes/cactus/_config.yml
@@ -5,7 +5,7 @@
 # Link to a page that gives an overview of all your projects.
 # This can be an external link (e.g., to you GitHub profile) or to another
 # page within your website.
-projects_url: http://github.com/probberechts
+projects_url: https://github.com/yufengouyang
 
 # Set the page direction to RTL or LTR. default is LTR. (if you set it 'rtl', the 'vazir' font will be loaded.)
 direction: ltr
@@ -15,10 +15,9 @@ direction: ltr
 # languages/*.yml
 nav:
   home: /
-  #about: /about/
   articles: /archives/
-  #projects: http://github.com/probberechts
-
+  search: /search/
+  about: /about/
 
 # Links to your social media accounts.
 # The 'icon' keys should correspond to Fontawesome icon names
@@ -33,6 +32,12 @@ social_links:
   -
     icon: mail
     link: mailto:ou_1415190020@163.com
+  -
+    icon: weixin
+    link: mailto:ou_1415190020@163.com
+  -
+    icon: qq
+    link: mailto:ou_1415190020@163.com
 
 # Customize the overview with displaying a tagcloud on the index page.
 # Options: https://hexo.io/docs/helpers.html#tagcloud
@@ -46,7 +51,7 @@ tags_overview: false
 posts_overview:
   show_all_posts: false
   post_count: 5
-  sort_updated: false
+  sort_updated: true
 
 # Customize the archive view.
 # Options:
@@ -65,8 +70,8 @@ post:
 # Customize the copyright years
 # Note: if start_year/end_year not provided, will use current year.
 copyright:
-  start_year: 2016
-  end_year:
+  start_year: 2024
+  end_year: 2034
 
 # Customize the 404 page
 # Options:
@@ -93,7 +98,7 @@ logo:
   enabled: true
   width: 50
   height: 50
-  url: /images/logo.png
+  url: /images/head-logo.jpg
   gravatar: false
   grayout: true
 
@@ -108,13 +113,13 @@ logo:
 #   - gravatar: whether to create a favicon from your Gravatar
 favicon:
   desktop:
-    url: /images/favicon.ico
+    url: /images/head-favicon.ico
     gravatar: false
   android:
-    url: /images/favicon-192x192.png
+    url: /images/head-favicon-192x192.png
     gravatar: false
   apple:
-    url: /images/apple-touch-icon.png
+    url: /images/head-apple-touch-icon.png
     gravatar: false
 
 # The color scheme that should be used to highlight codeblocks.
@@ -203,3 +208,7 @@ cdn:
   font_awesome: https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css
   justified_gallery_css: https://cdnjs.cloudflare.com/ajax/libs/justifiedGallery/3.8.1/css/justifiedGallery.min.css
   justified_gallery_js: https://cdnjs.cloudflare.com/ajax/libs/justifiedGallery/3.8.1/js/jquery.justifiedGallery.min.js
+
+# 是否开启访问量统计功能(不蒜子)
+busuanzi:
+ enable: true
