--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: 欧阳俞峰的个人博客2
+title: 欧阳俞峰的个人博客
 subtitle: '欧阳俞峰的个人博客'
 description: '这是一个JAVA博客，会不定期更新一些文章，希望你能在我的博客找到满意的答案!'
 keywords:
