访问仓库修改

--- a/themes/cactus/_config.yml
+++ b/themes/cactus/_config.yml
@@ -5,7 +5,7 @@
 # Link to a page that gives an overview of all your projects.
 # This can be an external link (e.g., to you GitHub profile) or to another
 # page within your website.
-projects_url: https://github.com/yufengouyang
+projects_url: https://github.com/ouyangyufeng123
 
 # Set the page direction to RTL or LTR. default is LTR. (if you set it 'rtl', the 'vazir' font will be loaded.)
 direction: ltr
@@ -28,7 +28,7 @@ nav:
 social_links:
   -
     icon: github
-    link: https://github.com/yufengouyang
+    link: https://github.com/ouyangyufeng123
   -
     icon: mail
     link: mailto:ou_1415190020@163.com
