--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 title: 欧阳俞峰的个人博客
 subtitle: '欧阳俞峰的个人博客'
 description: '这是一个JAVA博客，会不定期更新一些文章，希望你能在我的博客找到满意的答案!'
-keywords:
+keywords: 'java'
 author: ouyangyufeng
 language: zh-CN
 timezone: ''
@@ -61,7 +61,7 @@ prismjs:
 # order_by: Posts order. (Order by date descending by default)
 index_generator:
   path: ''
-  per_page: 10
+  per_page: 15
   order_by: -date
 
 # Category & Tag
@@ -84,7 +84,7 @@ updated_option: 'mtime'
 
 # Pagination
 ## Set per_page to 0 to disable pagination
-per_page: 10
+per_page: 26
 pagination_dir: page
 
 # Include / Exclude file(s)
