--- a/themes/cactus/_config.yml
+++ b/themes/cactus/_config.yml
@@ -45,8 +45,8 @@ tags_overview: false
 #   - post_count: whether to show only the x most recent posts.
 #   - sort_updated: sort posts by last modification date instead of creation date.
 posts_overview:
-  show_all_posts: true
-  post_count: 10
+  show_all_posts: false
+  post_count: 5
   sort_updated: true
 
 # Customize the archive view.
