--- a/themes/cactus/_config.yml
+++ b/themes/cactus/_config.yml
@@ -47,7 +47,7 @@ tags_overview: false
 posts_overview:
   show_all_posts: false
   post_count: 5
-  sort_updated: true
+  sort_updated: false
 
 # Customize the archive view.
 # Options:
